--- a/views/Index.hbs
+++ b/views/Index.hbs
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
-      <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/fontawesome-all.css">
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:600" rel="stylesheet">
 </head>
-<body>
 
-     <header id="header">
+<body>
+    <header id="header">
         <nav class="menu">
             <div class="logo">
                 <img src="Data/logo-01.png" alt="">
@@ -21,7 +22,6 @@
                     </i>
                 </a>
             </div>
-
             <div class="enlaces" id="enlaces">
                 <a class="home" href="#">New</a>
                 <a class="how" href="#">Books</a>
@@ -33,10 +33,9 @@
     </header>
     <!--________________________ /header cerrado____________________ -->
 
-  <!--                              /carrusel-->
+    <!--                              /carrusel-->
 
     <div class="container">
-       
         <div class="arrow arrow-left">
             <i class="fas fa-chevron-circle-left"></i>
         </div>
@@ -62,7 +61,7 @@
 
 
     </div>
-   
+
 
 
 
@@ -209,7 +208,7 @@
 
             <div class="log"></div>
             <img src="Data/logo-01.png" alt="" width="50%" height="50%">
-            
+
         </div>
         <div class="cont-social">
             <a href="#">
@@ -227,16 +226,11 @@
         </div>
     </footer>
     <!--                              /footer cerrado_______________________-->
-
-
-
-
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/headroom.js"></script>
     <script src="js\java.js"></script>
-     <script src="js\index.js"></script>
-
-
-    
+    <script src="js\index.js"></script>
 </body>
+
 </html>
+<!--                              /Ana Maria Burbano Franco _______________________-->
