--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,9 +2,7 @@
 $principal: 'Nunito',
 sans-serif;
 $colorp: #0EAA65;
-$verdeOscuro:rgb(4,
-121,
-68);
+$verdeOscuro:rgb(4,121,68);
 $color: #E5E5E5;
 $balnco: #ffffff;
 $white: #FFF;
@@ -126,6 +124,7 @@ $right: auto) {
 }
 
 .container {
+    margin-top: -2rem;
     width: 100%;
     height: 50rem;
     position: relative;
@@ -1136,6 +1135,7 @@ $right: auto) {
     }
 } //_______________
 footer {
+    height: 1vh;
     width: 100%;
     background: $colorp;
     .ifo {
@@ -1153,9 +1153,7 @@ footer {
         align-items: center;
         margin-bottom: 5%;
         margin-left: 150px;
-        .log {
-            img {}
-        }
+
     }
     .cont-social {
         background: $verdeOscuro;
