creado las paginas de precentacion

--- a/views/Index.hbs
+++ b/views/Index.hbs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header id="header">
+  <header id="header">
         <nav class="menu">
             <div class="logo">
                 <img src="Data/logo-01.png" alt="">
@@ -22,12 +22,18 @@
                     </i>
                 </a>
             </div>
+
             <div class="enlaces" id="enlaces">
-                <a class="home" href="#">New</a>
-                <a class="how" href="#">Books</a>
+                <a class="home" href="/">New</a>
+                <a class="how" href="/buscador">Books</a>
                 <a class="book" href="#">Tops</a>
                 <a class="contact" href="#">Ebook</a>
-                <a class="contact" href="#">Sing In</a>
+                <a class="tienda" href="/carrito">
+                    <div>
+                        <img src="Data/ICONO.png" width="26px" alt="" class="shopping-cart">
+                        <span class="carrito">0</span>
+                    </div>
+                </a>
             </div>
         </nav>
     </header>
