--- a/public/css/bus.scss
+++ b/public/css/bus.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
 $white: #FFF;
+
 $black: #000;
 $slide: #efd2ca;
 $red: #ff0000;
@@ -11,6 +12,8 @@ $graydark: #cecece;
 $graytext: #4b5f5a;
 $colorp: #0EAA65;
 $verdeOscuro:rgb(4,121,68);
+$principal: 'Nunito';
+
 * {
     font-family: "Nunito", sans-serif;
 }
@@ -32,10 +35,10 @@ body {
     width: 100%;
     height: 100em;
     margin-top: 10em;
+    margin-left: 5%;
     .filtro {
         width: 20%;
-        height: 100vh;
-        background: $verdeOscuro; //position: fixed;
+        background: $colorp; 
         float: left;
         top: 0;
         .filbotones {
@@ -54,77 +57,89 @@ body {
         .filbotones {
             .filtema {
                 h2 {
-                    color: $rose;
+                    color: $white;
                     font-size: 1.5em;
-                    padding: 5% 0 2% 0;
+                    padding: 5% 0 2% 5%;
                     width: 100%;
-                    text-align: center;
+                    text-align: left;
                     font-family: "Nunito", sans-serif;
                 }
                 a {
-                    color: $graytext;
+                    color: rgba($white, 0.5);
                     font-size: 1em;
                     display: flex;
                     flex-wrap: wrap;
                     width: 50%;
-                    padding: 2% 0 2% 5%;
                     font-family: "Nunito", sans-serif;
+                    text-decoration: none;
+                    padding: 2% 0 2% 25%;
+                    
+
+
                 }
             }
             .filidio {
                 h2 {
-                    color: $rose;
+                    color: $white;
                     font-size: 1.5em;
-                    padding: 5% 0 2% 0;
+                    padding: 5% 0 2% 5%;
                     width: 100%;
-                    text-align: center;
+                    text-align: left;
                     font-family: "Nunito", sans-serif;
                 }
                 a {
-                    color: $graytext;
+                    color: rgba($white, 0.5);
                     font-size: 1em;
                     display: flex;
                     flex-wrap: wrap;
                     width: 50%;
                     padding: 2% 0 2% 5%;
                     font-family: "Nunito", sans-serif;
+                    text-decoration: none;
+                    padding: 2% 0 2% 25%;
                 }
             }
             .filedito {
                 h2 {
-                    color: $rose;
+                    color: $white;
                     font-size: 1.5em;
-                    padding: 5% 0 2% 0;
+                    padding: 5% 0 2% 5%;
                     width: 100%;
-                    text-align: center;
+                    text-align: left;
                     font-family: "Nunito", sans-serif;
+                    
                 }
                 a {
-                    color: $graytext;
+                    color: rgba($white, 0.5);
                     font-size: 1em;
                     display: flex;
                     flex-wrap: wrap;
                     width: 50%;
                     padding: 2% 0 2% 5%;
                     font-family: "Nunito", sans-serif;
+                    text-decoration: none;
+                    padding: 2% 0 2% 25%;
                 }
             }
             .filcali {
                 h2 {
-                    color: $rose;
+                    color: $white;
                     font-size: 1.5em;
-                    padding: 5% 0 5% 0;
+                    padding: 5% 0 2% 5%;
                     width: 100%;
-                    text-align: center;
+                    text-align: left;
                     font-family: "Nunito", sans-serif;
+                  
                 }
                 a {
-                    color: $graytext;
+                    color: rgba($white, 0.5);
                     font-size: 1em;
                     padding: 5% 0 2% 5%;
                     font-family: "Nunito", sans-serif;
+                    text-decoration: none;
+                    padding: 2% 0 2% 25%;
                 }
-            }
+            } 
         }
         .filbarras {
             width: 100%;
@@ -150,12 +165,13 @@ body {
                         text-align: center;
                         font-family: "Nunito", sans-serif;
                         font-size: 18px;
-                        color: $blue;
+                       
                     }
                 }
                 .minMax {
                     width: 80%;
                 }
+                
             }
         }
     }
@@ -187,15 +203,22 @@ body {
                     .nom {
                         font-size: 20px;
                         margin-bottom: 0.4em;
+                        .nombre{
+                            text-decoration: none;
+                            font-family: $principal;
+                            font-weight:800;
+                            color:  $black;
+
+                         }
                     }
                 }
                 .boton {
-                    margin: 10px 0;
+                    margin: 0px 0;
                     .agregar {
                         margin: .5em 0;
                         border: none;
-                        background: $rose;
-                        color: #f2f2f2;
+                        background: $colorp;
+                        color: $white;
                         font-size: 10px;
                         border-radius: 25px;
                         position: relative;
@@ -204,19 +227,7 @@ body {
                         padding: 1em 2em;
                         overflow: hidden;
                     }
-                    .more {
-                        margin: .5em 0;
-                        border: 1.5px solid $rose;
-                        background: $white;
-                        color: $rose;
-                        font-size: 10px;
-                        border-radius: 25px;
-                        position: relative;
-                        box-sizing: border-box;
-                        transition: all 500ms ease;
-                        padding: 1em 2em;
-                        overflow: hidden;
-                    }
+                   
                 }
             }
         }
