acomodar odio todo

--- a/views/buscador.hbs
+++ b/views/buscador.hbs
@@ -58,22 +58,36 @@
     <!--                              /libros____________________ -->
     <section class="cuerpo">
         <div class="container">
-            <div class="arrow arrow-left">
-                <i class="fas fa-chevron-circle-left"></i>
+        <div class="arrow arrow-left">
+            <i class="fas fa-chevron-circle-left"></i>
+        </div>
+        <img src="Data\1.jpg" alt="">
+        <img src="Data\2.jpg" alt="">
+        <img src="https://images.unsplash.com/photo-1471138406156-7a89e687a062?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=7820fc816715b37942a793360b785c60"
+            alt="">
+        <div class="arrow arrow-right">
+            <i class="fas fa-chevron-circle-right"></i>
+        </div>
+
+        <div class="dots">
+            <div class="dot">
+                <i class="far fa-dot-circle"></i>
             </div>
-            <img src="Data\1.jpg" alt="">
-            <img src="Data\2.jpg" alt="">
-            <img src="https://images.unsplash.com/photo-1471138406156-7a89e687a062?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=7820fc816715b37942a793360b785c60"
-                alt="">
-            <div class="arrow arrow-right">
-                <i class="fas fa-chevron-circle-right"></i>
+            <div class="dot">
+                <i class="far fa-circle"></i>
             </div>
-            <div class="buscador">
+            <div class="dot">
+                <i class="far fa-circle"></i>
+            </div>
+        </div>
+        
+          <div class="buscar">
                 <input type="text" placeholder="Buscar">
             </div>
 
-        </div>
 
+    </div>
+      
 
         </div>
         <div class="dentro">
@@ -119,14 +133,14 @@
 
             <!--Parte Derecha de la pantalla-->
             <div class="libros">
-
                 <div class="lib">
                     {{#each productos}}
                     <div class="libro" data-id="{{this._id}}">
+                       
                         <div class="imagen" style="background-image: url({{libro}});"></div>
                         <div class="descri">
                             <p class="nom">
-                                <a class="nombre" href="/bus/libros/{{nombre}}">
+                                 <a class="nombre" href="/buscador/libro/{{nombre}}">
                                 <b>{{nombre}}</b>
                                 </a>
                             </p>
@@ -147,9 +161,6 @@
                             </p>
                         </div>
                         <div class="boton" align="center">
-                            <a href="/reco/specific/{{nombre}}">
-                               
-                            </a>
                             <button class="agregar">Add To Card</button>
                         </div>
                     </div>
@@ -180,11 +191,12 @@
     <!--                                     /footer cerrado_______________________-->
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/headroom.js"></script>
-    <script src="js/productos.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="js/cliente.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js\java.js"></script>
+    <script src="js\index.js"></script>
+
 </body>
-
-
 
 </html>
