--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/fontawesome-all.css">
 </head>
+
 <body>
     <header id="header">
         <nav class="menu">
@@ -37,5 +39,14 @@
             </div>
         </nav>
     </header>
+
+    <div class="carrito">
+        <ul class="lista"></ul>
+    </div>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="/js/cliente.js"></script>
+    <script src="/js/carrito.js"></script>
 </body>
+
 </html>
