--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -33,18 +33,16 @@
                 <a class="tienda" href="/carrito">
                     <div>
                         <img src="Data/ICONO.png" width="26px" alt="" class="shopping-cart">
-                        <span class="carrito">0</span>
+                        <span class="carri">0</span>
                     </div>
                 </a>
             </div>
         </nav>
     </header>
 
-    <div class="carrito">
-        <ul class="lista"></ul>
-    </div>
-
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+            <div class="carri">
+            <ul class="lista"></ul>
+        </div>
     <script src="/js/cliente.js"></script>
     <script src="/js/carrito.js"></script>
 </body>
