--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -10,8 +10,9 @@
 
 
     <link rel="stylesheet" href="/css/bus.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="/css/fontawesome-all.css">
+    
 </head>
 
 <body>
