--- a/public/css/bus.scss
+++ b/public/css/bus.scss
@@ -1,10 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
 $white: #FFF;
+
 $black: #000;
+
+$graydark: #cecece;
+
 $colorp: #0EAA65;
 $verdeOscuro:rgb(4,121,68);
 $color: #E5E5E5;
 $principal: 'Nunito';
+
+* {
+    font-family: "Nunito", sans-serif;
+}
 
 p {
     font-size: 10px;
@@ -136,7 +144,7 @@ body {
     }
     .libros {
         width: 80%;
-    
+        height: 110em;
         float: left;
         .lib {
             width: 100%;
