--- a/public/css/libro.scss
+++ b/public/css/libro.scss
@@ -8,15 +8,15 @@ $verdeOscuro:rgb(4,121,68);
 $color: #E5E5E5;
 $principal: 'Nunito';
 
-p {
-    font-size: 18px;
-    margin-bottom: 1em;
-}
+
 
 body {
     height: 100em;
 }
-
+p {
+    font-size: 18px;
+    margin-bottom: 1em;
+}
 .lob{
     width: 100%;
     float: left;
@@ -25,7 +25,7 @@ body {
         display: flex;
         .libro {
             width: 100%;
-            height: 100vh;
+            height: 100em;
             background: $white;
             margin: 20px;
             border-radius: 6px;
@@ -72,7 +72,7 @@ body {
                 .agregar {
                     margin: .5em 0;
                     border: none;
-                    background: $rose;
+                    background: $white;
                     color: #f2f2f2;
                     font-size: 10px;
                     border-radius: 25px;
@@ -84,9 +84,9 @@ body {
                 }
                 .atras {
                     margin: .5em 0;
-                    border: 1.5px solid $rose;
+                   
                     background: $white;
-                    color: $rose;
+                    color: $colorp;
                     font-size: 10px;
                     border-radius: 25px;
                     position: relative;
