--- a/public/css/libro.scss
+++ b/public/css/libro.scss
@@ -4,96 +4,111 @@ $black: #000;
 $white: #FFF;
 $black: #000;
 $colorp: #0EAA65;
-$verdeOscuro:rgb(4,121,68);
+$verdeOscuro:rgb(4,
+121,
+68);
 $color: #E5E5E5;
 $principal: 'Nunito';
-
-
-
 body {
     height: 100em;
 }
+
 p {
     font-size: 18px;
     margin-bottom: 1em;
 }
-.lob{
+
+.lob {
     width: 100%;
-    float: left;
-    .aqui {
+    margin-top: 10em;
+    background: $white;
+       .aqui {
         width: 100%;
         display: flex;
         .libro {
             width: 100%;
-            height: 100em;
-            background: $white;
-            margin: 20px;
-            border-radius: 6px;
-            box-shadow: 0px 0px 20px 0px rgba(20, 20, 20, 0.25);
-            .imagen {
-                -webkit-background-size: cover;
-                -moz-background-size: cover;
-                -o-background-size: cover;
-                background-size: cover;
-                height: 50%;
-                width: 100%;
-                border-radius: 6px 6px 0 0;
-            }
-            .descri {
-                width: 100%;
-                padding: 5% 5% 2% 5%;
-
-                .nom {
-                    font-size: 50px;
-                    margin-bottom: 0.4em;
-                }
-                .desc {
-                    font-size: 20px;
-                    margin-bottom: 0.4em;
-                    padding: 0 4em 0 0;
-                }
-                .datos {
-                    font-size: 16px;
-                    margin-bottom: 0.4em;
-                }
-            }
-            .container{
-                display: flex;
-                .text {
-                    width: 70%;
-                }
-                .dat {
-                    width: 30%;
-                    padding:  0 0 0 2em;
-                }
-            }
             
-            .boton {
-                .agregar {
-                    margin: .5em 0;
-                    border: none;
-                    background: $white;
-                    color: #f2f2f2;
-                    font-size: 10px;
-                    border-radius: 25px;
-                    position: relative;
-                    box-sizing: border-box;
-                    transition: all 500ms ease;
-                    padding: 1em 2em;
-                    overflow: hidden;
+            background: $white;
+            
+            .descri {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: nowrap;
+                justify-content: center;
+                align-content: center;
+                align-items: flex-end;
+                .primera {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: nowrap;
+                    justify-content: space-between;
+                    align-content: center;
+                    
+                    .imagen {
+                        width: 35%;
+                    }
+                    .base {
+                        width: 30%;
+
+                        .nom {
+                            font-size: 35px;
+                            margin-bottom: 0.4em;
+                        }
+                        .datos {
+                            font-size: 14px;
+                            margin-bottom: 0.4em;
+                            font-style: italic;
+                        }
+                    }
+                    .compra {
+                        width: 35%;
+                    
+
+                        background: $colorp;
+                        display: flex;
+                        flex-direction: column;
+                        flex-wrap: nowrap;
+                        justify-content: center;
+                        align-content: center;
+                        align-items: center;
+                        .precio {
+                            font-size: 40px;
+                            margin-bottom: 0.4em;
+                            color: $white;
+                        }
+                        h4 {
+                            font-size: 15px;
+                        color: $white;
+                        }
+                        .boton {
+                            margin: 10px 0;
+                            .agregar {
+                                margin: .5em 0;
+                                border: none;
+                                background: $colorp;
+                                color: $white;
+                                font-size: 10px;
+                                border-radius: 25px;
+                                position: relative;
+                                box-sizing: border-box;
+                                transition: all 500ms ease;
+                                padding: 1em 2em;
+                                overflow: hidden;
+                            }
+                        }
+                    }
                 }
-                .atras {
-                    margin: .5em 0;
-                   
-                    background: $white;
-                    color: $colorp;
-                    font-size: 10px;
-                    border-radius: 25px;
-                    position: relative;
-                    box-sizing: border-box;
-                    transition: all 500ms ease;
-                    padding: 1em 2em;
-                    overflow: hidden;
+                .segunda {
+                    width: 100%;
+                    height: 25em;
+                    background: $colorp;
+                    margin-top: 5em;
+                    .text {
+                        width: 60%;
+                        margin: 10% 20%;
+                        color: $white;
+                    }
                 }
             }
         }
