--- a/views/carrito.hbs
+++ b/views/carrito.hbs
@@ -11,8 +11,13 @@
 
     <link rel="stylesheet" href="/css/bus.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="/css/fontawesome-all.css">
+    <link rel="stylesheet" href="/css/carrito.css">
     
+    
+   
+   
+    <link rel="stylesheet" href="/css/fontawesome-all.css">
+
 </head>
 
 <body>
@@ -41,9 +46,9 @@
         </nav>
     </header>
 
-            <div class="carri">
-            <ul class="lista"></ul>
-        </div>
+    <div class="carri">
+        <ul class="lista"></ul>
+    </div>
     <script src="/js/cliente.js"></script>
     <script src="/js/carrito.js"></script>
 </body>
