codigo con error hagregado las lineas en svg

--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -10,6 +10,7 @@
 	<meta name="author" content="Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	 <link rel="stylesheet" href="css/style1.css">
 	<link rel="stylesheet" type="text/css" href="css/stylem.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/glitch-slideshow.css" />
@@ -33,6 +34,7 @@
 
 
 			<div class="slides slides--contained effect-2">
+				<svg id=svg></svg>
 
 				<div class="slide slide--current">
 
@@ -50,7 +52,7 @@
 							</span>
 						</a>
 						<audio id="player">
-							<source src="http://thiagovieira.com/images/OneDance-Drake.mp3" type="audio/mp3">
+							<source src="Data/music/LSD - Genius ft. Sia, Diplo, Labrinth.mp3" type="audio/mp3">
 						</audio>
 					</div>
 				</div>
@@ -103,6 +105,7 @@
 	<script src="js/demo.js"></script>
 	<script src="js/demo2.js"></script>
 	<script src="js/index.js"></script>
+	  <script src='https://codepen.io/jakealbaugh/pen/WvNjZB.js'></script>
 </body>
 
 </html
